Fixed rating alignment.

--- a/src/pages/Guide_4.scss
+++ b/src/pages/Guide_4.scss
@@ -10,6 +10,7 @@
   .rating {
       display: flex;
       flex-direction: column;
+      align-items: flex-start;
       gap: 1rem;
       margin-top: 1rem;
     }
